Less huge modification

--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -1,3 +1,4 @@
+home: 主页
 author: 作者
 date: 日期
 prev: 上一页
@@ -7,7 +8,7 @@ next_post: 下一篇文章
 search: 站内搜索
 untitled: 未命名
 share_to: 分享到
-weixin: 微信
+wechat: 微信
 weibo: 微博
 douban: 豆瓣
 friends: 友情链接
